containers/test-apps/courier/src/main/proxy/envoy.yaml
admin:
  access_log_path: /tmp/envoy_admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9095 }

static_resources:
  listeners:
    - name: frontend
      address:
        socket_address: { address: 0.0.0.0, port_value: 9094 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                access_log: # configure logging
                  name: envoy.file_access_log
                  config:
# Figure out custom format new lines, claims fixed: https://github.com/envoyproxy/envoy/pull/5755
#                    format: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%"
#                              %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION%
#                              %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%"
#                              "%REQ(X-CID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%"'
                    path: /tmp/envoy_frontend_access.log
                codec_type: auto
                http_filters:
                  - name: envoy.router
                    config: {}
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: courier_backend, timeout: { seconds: 60 } }
                stat_prefix: ingress_http

  clusters:
    - name: courier_backend
      connect_timeout: 5s
      hosts:
        - socket_address: { address: 127.0.0.1, port_value: 9091 }
      http2_protocol_options: {}
      lb_policy: round_robin
      type: logical_dns
